# dayder

./: .gitignore  Cargo.toml  LICENSE  README.md  format.md
btsf/: canada_gdp.btsf  mortality.btsf
public/: btsf  index.html
public/script/: main.js
scripts/: canada_gdp.rb  crunch.rb  fred.rb  mortality.rb
src/: main.rs
src/lib/: btsf.rs  caching.rs  correlate.rs  mod.rs  stats.rs
