[package]
name = "dayder"
version = "0.1.0"
authors = ["Marc Mailhot <mmm11105@gmail.com>"]

[dependencies]
byteorder = "0.5"
iron = "0.3"
staticfile = "0.2"
mount = "0.1"
persistent = "0.1"
lru_time_cache = "0.2"
lazy_static = "0.1"
url = "0.5"
memmem = "0.1"
lazysort = "0.1"
hprof = "0.1"
rayon = "0.8.2"
